--- a/Drive/package.json
+++ b/Drive/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0"
   }
 }
